# mav_flight_manager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: common_parameters.yaml
config/mission/: takeoff_land_1.yaml
include/: flightManager.h  utils.h
src/: flightManager.cpp  foxgloveVisual.cpp  launcher.cpp  mavAgentProxy.cpp  missionManager.cpp  utils.cpp
src/test/: dds_mav_pub.cpp
